@@ -31,5 +31,5 @@ Imports System.Runtime.InteropServices
 ' by using the '*' as shown below:
 ' <Assembly: AssemblyVersion("1.0.*")> 
 
-<Assembly: AssemblyVersion("3.3.5.0")>
-<Assembly: AssemblyFileVersion("3.3.5.0")>
+<Assembly: AssemblyVersion("3.3.5.1")>
+<Assembly: AssemblyFileVersion("3.3.5.1")>
