@@ -5,7 +5,7 @@
 	Comments.
 ***********************************************************************/
 
-select 'hello world' as [MyColumn]
+select 'hello world! love, {THIS}' as [MyColumn]
 
 </Code>
 </Squealer>
