@@ -5,7 +5,7 @@
 	Comments.
 ***********************************************************************/
 
-select 'hello world'
+select 'hello world! love, {THIS}'
 
 </Code>
 </Squealer>
